44- RBAC-Use-ExternalDNS-Ingress-Basics-Default-Backend-SSL-NS/01-Nginx-App1-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-nginx-deployment
  labels:
    app: app1-nginx
  namespace: frontend  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-nginx
  template:
    metadata:
      labels:
        app: app1-nginx
    spec:
      containers:
        - name: app1-nginx
          #image: stacksimplify/kube-nginxapp1:1.0.0
          image: aslam24/nginx-web-kider:v1
          ports:
            - containerPort: 80
